--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,61 +1,48 @@
 name: ci
 
 on:
-    schedule:
-        - cron: "0 10 * * *"
-    push:
-        branches:
-            - "**"
-        tags:
-            - "v*.*.*"
-    pull_request:
+  push:
+    branches:
+      - "main"
+    tags:
+      - "*.*.*-*"
 
 jobs:
-    docker:
-        runs-on: ubuntu-latest
-        steps:
-            - name: Docker meta
-              id: meta
-              uses: docker/metadata-action@v5
-              with:
-                  # list of Docker images to use as base name for tags
-                  images: |
-                      name/app
-                      ghcr.io/username/app
-                  # generate Docker tags based on the following events/attributes
-                  tags: |
-                      type=schedule
-                      type=ref,event=branch
-                      type=ref,event=pr
-                      type=semver,pattern={{version}}
-                      type=semver,pattern={{major}}.{{minor}}
-                      type=semver,pattern={{major}}
-                      type=sha
+  docker:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Set branch and version
+        env:
+          REPO_TAG: ${{ github.ref_name }}
+        id: set_branch_and_version
+        run: |
+          BRANCH_NAME="${REPO_TAG##*.}"
+          echo "Branch: $BRANCH_NAME"
+          VERSION="${REPO_TAG%.*}"
+          echo "Version: $VERSION"
 
-            - name: Login to Docker Hub
-              if: github.event_name != 'pull_request'
-              uses: docker/login-action@v3
-              with:
-                  username: ${{ vars.DOCKERHUB_USERNAME }}
-                  password: ${{ secrets.DOCKERHUB_TOKEN }}
+      - name: Determine app id
+        run: |
+          if [ "$BRANCH_NAME" == "experimental" ]; then
+            APP_ID=1890870
+          else
+            APP_ID=1874900
+          fi
+          echo "AppId: $APP_ID"
 
-            - name: Login to GHCR
-              if: github.event_name != 'pull_request'
-              uses: docker/login-action@v3
-              with:
-                  registry: ghcr.io
-                  username: ${{ github.repository_owner }}
-                  password: ${{ secrets.GITHUB_TOKEN }}
+      - name: Login to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ vars.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-            - name: Set up QEMU
-              uses: docker/setup-qemu-action@v3
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
 
-            - name: Set up Docker Buildx
-              uses: docker/setup-buildx-action@v3
-
-            # - name: Build and push
-            #   uses: docker/build-push-action@v6
-            #   with:
-            #       push: ${{ github.event_name != 'pull_request' }}
-            #       tags: ${{ steps.meta.outputs.tags }}
-            #       labels: ${{ steps.meta.outputs.labels }}
+      - name: Build and push
+        uses: docker/build-push-action@v6
+        with:
+          push: true
+          tags: thewillard/arsa-test:${{ vars.BRANCH_NAME }}, thewillard/arsa-test:${{ vars.VERSION }}
+          build-args: |
+            STEAM_APP_ID=${{ vars.APP_ID }}
