--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,7 +20,7 @@ jobs:
           echo "Branch: $BRANCH_NAME"
           VERSION="${REPO_TAG%.*}"
           echo "Version: $VERSION"
-          echo "${{ secrets.DOCKERHUB_TOKEN }}"
+          echo "${{ vars.DOCKERHUB_USERNAME }}"
 
       - name: Determine app id
         run: |
