--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,7 +20,6 @@ jobs:
           echo "Branch: $BRANCH_NAME"
           VERSION="${REPO_TAG%.*}"
           echo "Version: $VERSION"
-          echo "${{ vars.DOCKERHUB_USERNAME }}"
 
       - name: Determine app id
         run: |
@@ -34,7 +33,7 @@ jobs:
       - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
-          username: ${{ vars.DOCKERHUB_USERNAME }}
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
       - name: Set up Docker Buildx
