--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,10 +2,8 @@ name: ci
 
 on:
   push:
-    branches:
-      - "main"
     tags:
-      - "*.*.*-*"
+      - "*.*.*.*"
 
 jobs:
   docker:
@@ -16,19 +14,17 @@ jobs:
           REPO_TAG: ${{ github.ref_name }}
         id: set_branch_and_version
         run: |
-          BRANCH_NAME="${REPO_TAG##*.}"
-          echo "Branch: $BRANCH_NAME"
-          VERSION="${REPO_TAG%.*}"
-          echo "Version: $VERSION"
+          echo "BRANCH_NAME=${REPO_TAG##*.}" >> $GITHUB_ENV
+          echo "VERSION=${REPO_TAG%.*}" >> $GITHUB_ENV
 
       - name: Determine app id
         run: |
+          echo "Branch: $BRANCH_NAME"
           if [ "$BRANCH_NAME" == "experimental" ]; then
-            APP_ID=1890870
+            echo "APP_ID=1890870" >> $GITHUB_ENV
           else
-            APP_ID=1874900
+            echo "APP_ID=1874900" >> $GITHUB_ENV
           fi
-          echo "AppId: $APP_ID"
 
       - name: Login to Docker Hub
         uses: docker/login-action@v3
