--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,6 +35,11 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
+      - name: Build
+        run: |
+          echo "Free space:"
+          df -h
+
       - name: Build and push
         uses: docker/build-push-action@v6
         with:
